# claude-injection-guard

./: .gitignore  CLAUDE.md  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md  claude_hooks.example.json  pyproject.toml  requirements-dev.txt
files/: ci.yml  config.example.yml  docker-compose.yml  logger.py  post_tool_use.py  pyproject.toml  stage1_rules.py  stage2_llm.py
guard/: config.py  logger.py  post_tool_use.py  stage1_rules.py  stage2_llm.py
hooks/: post_tool_use.py
tests/: TEST-RESULTS.md  test_config.py  test_logger.py  test_post_tool_use.py  test_stage1.py  test_stage2_llm.py
